--- a/my project.html
+++ b/my project.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>My project</title>
-<link rel="stylesheet" href="file:\\\C:\Users\asus\Desktop\html\mpcss.css">
+<link rel="stylesheet" href="file:\\\C:\Users\asus\Desktop\html\./mpcss.css">
 <link rel="icon" href="file:\\\C:\Users\asus\Desktop\html\favicon.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
