--- a/my project.html
+++ b/my project.html
@@ -2,7 +2,7 @@
 <head>
 <title>My project</title>
 <link rel="stylesheet" href="./mpcss.css">
-<link rel="icon" href="file:\\\C:\Users\asus\Desktop\html\favicon.ico">
+<link rel="icon" href="./favicon.ico">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet"><body>
@@ -19,7 +19,7 @@
 
 <div class="middle-container">
   <div class="profile">
-    <img class="photo" src="file:\C:\Users\asus\Desktop\html\photo.jpg" >
+    <img class="photo" src="./photo.jpg" >
     <h2>Hello.</h2>
     <p>I am a 2nd year CSE student. I have learnt HTML , CSS , C , C++ and learning pyhton. </p>
     <p>I work well in team and can learn fast.</p>
@@ -28,7 +28,7 @@
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="img1" src="file:\\C:\Users\asus\Desktop\html\img1.jpg" >
+      <img class="img1" src="./img1.jpg" >
       <h3>Lorem & Ipsum</h3>
       <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
     </div>
