--- a/my project.html
+++ b/my project.html
@@ -51,7 +51,7 @@
   <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/">Twitter</a>
   <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-  <p>© Divy Sharma.</p>
+  <p><b>© Divy Sharma.</b</p>
 </div>
 
 
